--- a/static/css/variables.less
+++ b/static/css/variables.less
@@ -20,8 +20,6 @@
 @grayDark: #333;
 
 @radius-size: 0.85em;
-@header-height: 4.75em;
-@filters-height: 4.25em;
 @content-width: 1170px;
 
 
